[package]
name = "chp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
color-eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
strum = "0.25"
strum_macros = "0.25"
toml = "0.8"

